[package]
name = "mina-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust SDK for interacting with Mina Protocol nodes via GraphQL"
repository = "https://github.com/MinaProtocol/mina-sdk-rust"
homepage = "https://github.com/MinaProtocol/mina-sdk-rust"
documentation = "https://docs.rs/mina-sdk"
readme = "README.md"
authors = ["Mina Protocol <engineering@minaprotocol.com>"]
keywords = ["mina", "blockchain", "graphql", "cryptocurrency", "web3"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
exclude = [".github/", "scripts/", "schema/", "tests/integration_tests.rs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "time"] }
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
rand = "0.10"
